[package]
name = "billiard"
version = "0.1.5"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 3

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]

[dependencies]
bevy = { version = "0.11.3", features = ["dynamic_linking", "jpeg"] }
bevy_rapier3d = { version = "0.22.0", features = ["enhanced-determinism"] } # "simd-stable", "parallel", 
bevy_gltf_collider = { git = "https://github.com/Defernus/bevy_gltf_collider.git" }
speedy = "0.8.6"